[package]
edition      = "2024"
name         = "core-ink-5"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "thing"
path = "./src/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b127", features = ["defmt", "esp32", "unstable"] }
esp-rtos = { version = "0.2.0", git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b127", features = ["defmt", "embassy", "esp-alloc", "esp32", "esp-radio"] }
esp-bootloader-esp-idf = { version = "^0.4.0", git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b127", features = ["defmt", "esp32"] }
esp-alloc = { version = "0.9.0", git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b127", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b127", features = ["defmt", "esp32", "panic-handler"] }
esp-println = { version = "0.16.1", git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b127", features = ["defmt-espflash", "esp32"] }
esp-radio = { version = "0.17.0", git = "https://github.com/esp-rs/esp-hal.git", rev = "ad5b127", features = ["defmt", "esp-alloc", "esp32", "unstable", "coex", "wifi", "ble"] }
defmt = "1.0.1"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
embassy-net = { version = "0.8.0", features = ["defmt", "dhcpv4", "medium-ethernet", "tcp", "udp", "dns"] }
critical-section = "1.2.0"
static_cell      = "2.1.1"
epd-waveshare = { version = "0.6.0", features = ["graphics"] }
embedded-graphics = "0.8.2"
embedded-hal-bus = { version = "0.1" }
no_std_strings = "0.1.3"
reqwless = { version = "0.14.0", default-features = false, features = ["defmt"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["defmt", "medium-ethernet", "multicast", "proto-dhcpv4", "proto-dns", "proto-ipv4", "socket-dns", "socket-icmp", "socket-raw", "socket-tcp", "socket-udp"] }
trouble-host = { version = "0.6.0", features= ["defmt"] }
heapless = "0.9.2"

[profile.dev]
opt-level = "s"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
